# test

./: .gitignore  HistoAnalyzer.spec  README.md  README_RU.md  RUN_WINDOWS_FULL_AI.bat  RUN_WINDOWS_LITE.bat  build_win.bat  main.py  pyproject.toml  requirements.txt  requirements_full_windows.txt
app/: entrypoint.py  main.py
app/ai/: __init__.py
app/ai/models/: __init__.py  downloader.py  registry.py
app/ai_engine/: __init__.py  analytics.py  engine.py
app/core/: acceleration.py  image_ops.py  mask_ops.py  morphometry.py  project_io.py
app/export/: csv_export.py  figure_export.py  geojson_export.py  pdf_report.py
app/models/: model_manager.py
app/modules/segmentation/: cellpose_runner.py  onnx_runner.py
app/ui/: i18n_ru.py  main_window.py  model_manager_dialog.py  settings_dialog.py  style.py
app/utils/: workers.py
app/viewer/: image_view.py
installer/: HistoAnalyzer.iss
tests/: test_acceleration_and_models.py  test_ai_pipeline.py  test_entrypoint.py  test_figure_export.py  test_morphometry.py  test_pdf_report.py  test_project_io_guided_calibration.py
